--- a/Midterm project/Welcome ~ Alan G. Labouseur.htm
+++ b/Midterm project/Welcome ~ Alan G. Labouseur.htm
@@ -18,6 +18,7 @@
 <body>
     <div id="page">
         <div id="main">
+            <img style="float:right; border:2px solid #800020; min-width: 100%; height: auto;" src="Welcome%20~%20Alan%20G.%20Labouseur_files/Alan1.png" alt="Alan G. Labouseur">
             <div id="gutter">
                 &nbsp;
             </div>
@@ -99,9 +100,9 @@
             <div id="middle">
                 &nbsp;
             </div>
-
+            
 <div id="content">
-    <img style="float:right; border:2px solid #800020;" src="Welcome%20~%20Alan%20G.%20Labouseur_files/Alan1.png" alt="Alan G. Labouseur" height="210">
+    
     <h1>
         Welcome
     </h1>
