requests 3 and 4 fulfilled

--- a/Midterm project/Welcome ~ Alan G. Labouseur.htm
+++ b/Midterm project/Welcome ~ Alan G. Labouseur.htm
@@ -18,7 +18,7 @@
 <body>
     <div id="page">
         <div id="main">
-            <img style="float:right; border:2px solid #800020; min-width: 100%; height: auto;" src="Welcome%20~%20Alan%20G.%20Labouseur_files/Alan1.png" alt="Alan G. Labouseur">
+            <img style="border:2px solid #800020; min-width: 100%; height: auto;" src="Welcome%20~%20Alan%20G.%20Labouseur_files/Alan1.png" alt="Alan G. Labouseur">
             <div id="gutter">
                 &nbsp;
             </div>
@@ -31,68 +31,68 @@
                     <!-- We need both the div here too because not all browsers recognize the HTML5 section element. -->
                     <div class="sectionHeading">
                         <section class="sectionHeading">
-                            <h4>Courses</h4>
+                            <h4 style="font-size: 7rem;">Courses</h4>
                         </section>
                     </div>
                     <section class="sectionContent nudge">
                         <ul>
-                           <li><a href="https://www.labouseur.com/courses/compilers" target="_blank">Compilers</a></li>
-                           <li><a href="https://www.labouseur.com/courses/tpl" target="_blank">Theory of Programming Languages</a></li>
+                           <li style="font-size: 2rem;"><a href="https://www.labouseur.com/courses/compilers" target="_blank">Compilers</a></li>
+                           <li style="font-size: 1.5rem;"><a href="https://www.labouseur.com/courses/tpl" target="_blank">Theory of Programming Languages</a></li>
 
-                           <li class="spaced"><a href="https://www.labouseur.com/courses/" target="_blank">All Courses</a></li>
-                           <li><a href="https://www.labouseur.com/courses/honesty.html" target="_blank">Academic Honesty</a></li>
-                           <li><a href="https://www.labouseur.com/courses/goals.pdf" target="_blank">Department Goals</a></li>
+                           <li style="font-size: 1rem;" class="spaced"><a href="https://www.labouseur.com/courses/" target="_blank">All Courses</a></li>
+                           <li style="font-size: 1.25rem;"><a href="https://www.labouseur.com/courses/honesty.html" target="_blank">Academic Honesty</a></li>
+                           <li style="font-size: 1.9rem;"><a href="https://www.labouseur.com/courses/goals.pdf" target="_blank">Department Goals</a></li>
                         </ul>
                     </section>
 
                     <div class="sectionHeading">
-                        <h4>Research</h4>
+                        <h4 style="font-size: 0.8rem;">Research</h4>
                     </div>
                     <section class="sectionContent nudge">
                         <ul>
-                            <li><a href="http://www.3nfconsulting.com/gstar/" target="_blank">G*</a></li>
-                            <li><a href="https://www.labouseur.com/research/" target="_blank">Alan</a></li>
+                            <li style="font-size: 0.7rem;"><a href="http://www.3nfconsulting.com/gstar/" target="_blank">G*</a></li>
+                            <li style="font-size: 2rem;"><a href="https://www.labouseur.com/research/" target="_blank">Alan</a></li>
                         </ul>
                     </section>
 
 
                     <div class="sectionHeading">
-                        <h4>Projects</h4>
+                        <h4 style="font-size: 2rem;">Projects</h4>
                     </div>
                     <section class="sectionContent nudge">
                         <ul>
-                            <li><a href="https://www.labouseur.com/projects/codeReckon/?a=a" target="_blank">Code Reckon</a></li>
-                            <li><a href="https://www.labouseur.com/projects/geo/?a=a" target="_blank">Geo SUITE</a></li>
-                            <li><a href="https://www.labouseur.com/projects/jsTreeDemo/" target="_blank">JavaScript Tree Demo</a></li>
-                            <li><a href="http://cdcor.github.io/OmniChron/" target="_blank">OmniChron</a></li>
-                            <li><a href="https://www.labouseur.com/projects/ziggy/" target="_blank">Ziggy</a></li>
+                            <li style="font-size: 1.3rem;"><a href="https://www.labouseur.com/projects/codeReckon/?a=a" target="_blank">Code Reckon</a></li>
+                            <li style="font-size: 0.5rem;"><a href="https://www.labouseur.com/projects/geo/?a=a" target="_blank">Geo SUITE</a></li>
+                            <li style="font-size: 0.2rem;"><a href="https://www.labouseur.com/projects/jsTreeDemo/" target="_blank">JavaScript Tree Demo</a></li>
+                            <li style="font-size: 1rem;"><a href="http://cdcor.github.io/OmniChron/" target="_blank">OmniChron</a></li>
+                            <li style="font-size: 1.1rem;"><a href="https://www.labouseur.com/projects/ziggy/" target="_blank">Ziggy</a></li>
                         </ul>
                     </section>
 
                     <div class="sectionHeading">
                         <section class="sectionHeading">
-                            <h4>Personal</h4>
+                            <h4 style="font-size: 2rem;">Personal</h4>
                         </section>
                     </div>
                     <section class="sectionContent nudge">
                         <ul>
-                            <li><a href="https://www.labouseur.com/personal/" target="_blank">About Alan</a></li>
-                            <li><a href="https://www.labouseur.com/personal/academics.html" target="_blank">Academics</a></li>
-                            <li><a href="http://maxlabouseur.blogspot.com/" target="_blank">Family</a></li>
-                            <li><a href="https://www.labouseur.com/personal/speaking.html" target="_blank">Speaking Engagements</a></li>
-                            <li><a href="https://www.labouseur.com/personal/interests.html" target="_blank">Technical Interests</a></li>
+                            <li style="font-size: 0.4rem;"><a href="https://www.labouseur.com/personal/" target="_blank">About Alan</a></li>
+                            <li style="font-size: 0.25rem;"><a href="https://www.labouseur.com/personal/academics.html" target="_blank">Academics</a></li>
+                            <li style="font-size: 1.89rem;"><a href="http://maxlabouseur.blogspot.com/" target="_blank">Family</a></li>
+                            <li style="font-size: 1.22rem;"><a href="https://www.labouseur.com/personal/speaking.html" target="_blank">Speaking Engagements</a></li>
+                            <li style="font-size: 0.99rem;"><a href="https://www.labouseur.com/personal/interests.html" target="_blank">Technical Interests</a></li>
                         </ul>
                     </section>
 
                     <div class="sectionHeading">
                         <section class="sectionHeading">
-                            <h4>Business</h4>
+                            <h4 style="font-size: 1.99999rem;">Business</h4>
                         </section>
                     </div>
                     <section class="sectionContent nudge">
                         <ul>
-                            <li><a href="http://www.3nfconsulting.com/" target="_blank">3NF Consulting, Inc.</a></li>
-                            <li><a href="http://www.lifesciencequest.com/" target="_blank">Life Science Quest</a></li>
+                            <li style="font-size: 1rem;"><a href="http://www.3nfconsulting.com/" target="_blank">3NF Consulting, Inc.</a></li>
+                            <li style="font-size: 1.4rem;"><a href="http://www.lifesciencequest.com/" target="_blank">Life Science Quest</a></li>
                         </ul>
                     </section>
                 </div>
@@ -103,7 +103,7 @@
             
 <div id="content">
     
-    <h1>
+    <h1 style="font-size: 15rem;">
         Welcome
     </h1>
     <br style="clear: both;">
@@ -233,6 +233,7 @@
             <img src="Welcome%20~%20Alan%20G.%20Labouseur_files/Turing-award-winners-medium.png" alt="ACM Turing Award Winners" width="560">
         </a>
     </div>
+    <h1>Thanks for Visiting!</h1>
 </div>
         </div>
         <br class="clear">
